--- a/GPSCompanionApp/app/src/main/res/values/strings.xml
+++ b/GPSCompanionApp/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Logger Companion</string>
+    <string name="app_name">Logger</string>
     <string name="action_settings">Settings</string>
     <string name="title_mainMenu">Main Menu</string>
     <string name="title_activity_main">Logger Companion</string>
@@ -32,6 +32,9 @@
     <string name="btn_discoverDevices">Not in list? Discovery devices</string>
     <string name="btn_showChooser">Select Device</string>
     <string name="btn_cancel">Cancel</string>
+
+    <!-- Filter by date dialog -->
+    <string name="btn_filterByDate">Show journeys</string>
 
     <!-- Device settings Dialog -->
     <string name="btn_updateSettings">Update Settings</string>
