Added update log views

--- a/GPSCompanionApp/app/src/main/res/values/strings.xml
+++ b/GPSCompanionApp/app/src/main/res/values/strings.xml
@@ -56,6 +56,9 @@
     <string name="lbl_mediumSpeed">20 - 40</string>
     <string name="lbl_highSpeed">40+</string>
 
+    <string name="btn_updateLog">View Update Log</string>
+    <string name="btn_loggerStatus">View Logger Status</string>
+
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
